# repos8

1744551094-floneum-floneum/: .gitignore
1744830442-sourmash-bio-sourmash/: .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  dev.yml  flake.nix  pyproject.toml
1744830442-sourmash-bio-sourmash/.github/: dependabot.yml
1744830442-sourmash-bio-sourmash/.github/workflows/: asv.yml  build_wheel.yml  build_wheel_all_archs.yml  dev_envs.yml  hypothesis.yml  python.yml  rust.yml
1744830442-sourmash-bio-sourmash/doc/: command-line.md  databases.md  release.md  support.md
1744830442-sourmash-bio-sourmash/include/: sourmash.h
1744830442-sourmash-bio-sourmash/src/core/: CHANGELOG.md  Cargo.toml
1744830442-sourmash-bio-sourmash/src/core/benches/: minhash.rs
1744830442-sourmash-bio-sourmash/src/core/src/: ani_utils.rs  cmd.rs  collection.rs  encodings.rs  errors.rs  lib.rs  manifest.rs  selection.rs  signature.rs  wasm.rs
1744830442-sourmash-bio-sourmash/src/core/src/ffi/: minhash.rs  mod.rs  signature.rs
1744830442-sourmash-bio-sourmash/src/core/src/ffi/cmd/: compute.rs
1744830442-sourmash-bio-sourmash/src/core/src/ffi/index/: mod.rs  revindex.rs
1744830442-sourmash-bio-sourmash/src/core/src/index/: linear.rs  mod.rs
1744830442-sourmash-bio-sourmash/src/core/src/index/revindex/: disk_revindex.rs  mem_revindex.rs  mod.rs
1744830442-sourmash-bio-sourmash/src/core/src/sketch/: minhash.rs
1744830442-sourmash-bio-sourmash/src/core/src/storage/: mod.rs
1744830442-sourmash-bio-sourmash/src/core/tests/: minhash.rs  storage.rs
1744830442-sourmash-bio-sourmash/src/sourmash/: command_compute.py  command_sketch.py  commands.py  distance_utils.py  minhash.py  plugins.py  save_load.py  sbt.py  sourmash_args.py
1744830442-sourmash-bio-sourmash/tests/: conftest.py  test_api.py  test_cmd_index.py  test_cmd_signature.py  test_index.py  test_index_protocol.py  test_lca_db_protocol.py  test_manifest_protocol.py  test_minhash.py  test_plugin_framework.py  test_revindex.py  test_sbt.py  test_search.py  test_signature.py  test_sketchcomparison.py  test_sourmash.py  test_sourmash_args.py  test_sourmash_compute.py  test_sourmash_sketch.py  test_sqlite_index.py  test_tax_utils.py
1744833407-zloi-user-hideip.me/: connect.txt  http.txt  https.txt  socks4.txt  socks5.txt
1744833742-freedomofpress-securedrop/: Cargo.toml  Makefile  changelog.md  pyproject.toml
1744833742-freedomofpress-securedrop/.cargo/: audit.toml
1744833742-freedomofpress-securedrop/.github/: PULL_REQUEST_TEMPLATE.md
1744833742-freedomofpress-securedrop/.github/workflows/: build.yml  cargo-vet.yml  ci.yml  demo.yml  security.yml  staging.yml  translation.yml
1744833742-freedomofpress-securedrop/.well-known/: funding-manifest-urls
1744833742-freedomofpress-securedrop/admin/: requirements-ansible.in  requirements-dev.in  requirements-dev.txt  requirements-testinfra.in  requirements-testinfra.txt  requirements.txt
1744833742-freedomofpress-securedrop/admin/securedrop_admin/: __init__.py
1744833742-freedomofpress-securedrop/admin/tests/: test_integration.py  test_securedrop-admin.py
1744833742-freedomofpress-securedrop/builder/: Dockerfile  build-debs-securedrop.sh
1744833742-freedomofpress-securedrop/noble-migration/: Cargo.toml
1744833742-freedomofpress-securedrop/noble-migration/files/: apt_freedom_press.list  sources.list  ubuntu.sources
1744833742-freedomofpress-securedrop/noble-migration/src/: lib.rs
1744833742-freedomofpress-securedrop/redwood/: Cargo.toml
1744833742-freedomofpress-securedrop/securedrop/: i18n.json  i18n.py  i18n.rst  server_os.py  setup.py  source_user.py  version.py
1744833742-freedomofpress-securedrop/supply-chain/: audits.toml  config.toml
1744833742-freedomofpress-securedrop/utils/: backport.py
(+249 files in other folders)
